--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^7.0.3",
     "form-backend-validation": "^2.4.0",
     "laravel-mix": "^6.0.49",
+    "laravel-nova": "^1.12.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "resolve-url-loader": "^5.0.0",
